# RenderManager

RenderManagerTest/: settings.gradle
RenderManagerTest/app/: build.gradle
RenderManagerTest/app/src/androidTest/java/com/example/android/RenderManagerTest/: ExampleInstrumentedTest.java
RenderManagerTest/app/src/main/: AndroidManifest.xml
RenderManagerTest/app/src/main/cpp/: CMakeLists.txt
RenderManagerTest/app/src/main/cpp/Jni/: Device.cpp  Device.hpp  Update.cpp
RenderManagerTest/app/src/main/cpp/RenderManager/: BdtInfo.cpp  BdtInfo.h  Camera.cpp  Collider.cpp  Collider.hpp  Layer.cpp  Layer.hpp  Mesh.cpp  Mesh.hpp  MeshLayer.cpp  Object.cpp  Object.hpp  OtherLayer.cpp  RenderManager.cpp  RenderManager.hpp  Shader.cpp  Shader.hpp
RenderManagerTest/app/src/main/cpp/SampleScene/: SampleScene.cpp  SampleScene.hpp
RenderManagerTest/app/src/main/cpp/Tools/: Tools.hpp  Vec.hpp
RenderManagerTest/app/src/main/java/com/example/android/RenderManagerTest/: MainActivity.java  MainRender.java
RenderManagerTest/app/src/main/res/raw/: white_box.bdt
RenderManagerTest/app/src/main/res/values/: strings.xml  themes.xml
RenderManagerTest/app/src/main/res/values-night/: themes.xml
RenderManagerTest/app/src/test/java/com/example/android/RenderManagerTest/: ExampleUnitTest.java
RenderManagerTest/gradle/wrapper/: gradle-wrapper.properties
